...

    nonisolated var id: Self { self }

    nonisolated var tabTitle: LocalizedStringResource {
        switch self {
        case .home:
            "tab.home"
        case .calendar:
            "tab.calendar"
        case .todo:
            "tab.todo"
        case .team:
            "tab.team"
        case .more:
            "tab.more"
        }
    }

    nonisolated var localizedTitle: String {
        AppLocalization.string("tab.\(rawValue)", table: "Localizable")
    }
...
