...
                            from: nil,
                            for: nil
                        )
                    } label: {
                        Text("common.keyboard.done")
                    }
                    .accessibilityIdentifier("keyboard.dismiss")
                }
            }
    }
}

extension View {
...
